usługi>dzieci - menu

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <!-- o nas -->
     <div style="height: auto; width: 100vw; background-color: #9f2067ff; padding: 30px 5vh 30px 5vh;" id="onas">
-        <div class="avoidSidebar">
+        <div style="text-align: center;">
           <img src="src/logo-biale.png" style="width: 200px;"> </img>
           <h3>
             Animatu to przede wszystkim grupa profesjonalistów, którzy uwielbiają dobrą zabawę i nie boją się wyzwań.
@@ -114,6 +114,37 @@
           Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat.
           Prywatnie miłośniczka psów, zwłaszcza springerów, w wolnych chwilach lubi przemeblowywać mieszkanie.
           </h3>
+          <img src="src/martyna.png" style="border-radius: 50%; width: 200px;"> </img>
+          <h2> Martyna Mamcarczyk-Stopka </h2>
+          <h3>
+            Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry.
+            Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. Od zawsze dawało mi to zastrzyk pozytywnej
+            energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach.
+            Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek.
+            Każdy wasz uśmiech daje mi ogromną radość i motywacje do dalszego działania. Czekam z niecierpliwością na kolejne spotkania !
+          </h3>
+          <img src="src/juliam.jpg" style="border-radius: 50%; width: 200px;"> </img>
+          <h2> Julia Moskwa </h2>
+          <h3>
+            Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji.
+            Czasem łapię się na tym, że zdarza mi się pomylić zebrę z żyrafą.
+          </h3>
+          <img src="src/julia.jpg" style="border-radius: 50%; width: 200px;"> </img>
+          <h2> Julka Janik </h2>
+          <h3>
+            W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. Od zawsze interesowała mnie zabawa z dziećmi,
+            ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach. Jednymi z moich ulubionych zajęć
+            jest gra na ukulele oraz tańce integracyjne.
+          </h3>
+          <div style="border-top: 3px dashed white; margin-top: 23px;">
+            <h2 style="text-decoration: underline;"> Nasze osiągnięcia: </h2>
+            <h3>Strefa Dziecięca "Małpi Chwyt" </h3>
+            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            <h4>Organizacja strefy Małpi Chwyt podczas największej wspinaczkowej imprezy w Polsce południowej.</br>To niesamowicie satysfakcjonujące
+            tworzyć strefę animacyjną otwartą 24 godziny na dobę przez trzy dni. </h4>
+            <h3>Animację świąteczne w Park & Hotel Łysoń </h3>
+            Karuzela ze zdjęciami będzie tu, o :)
+          </div>
         </div>
       </div>
     </div>
@@ -122,86 +153,121 @@
     <div style="height: auto; background-color: #ffe44dff" id="uslugi">
         <div style="height: 33.3vh; line-height: 33.3vh; padding: 0 15px 15px 15px; background-color: #00b353ff" id="dzieci">
           <span> <h3> DLA DZIECI </h3> </span>
+          <!-- rozwijanie dla dzieci -->
           <div style="line-height: 150%;" id="tresc">
-            <h3 style="margin-top: 0;"> </br> Urodziny to bardzo wyjątkowa sprawa dla każdego młodego człowieka, dlatego w tej sprawie jesteśmy otwarci na potrzeby dzieci.
-            </h3>
-            <!-- Tematy urodzin -->
-            <div class="row-fluid">
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Indiańska wioska </h4>
-                Indiańskie podchody </br>
-                Zdobywanie pióropuszy </br>
-                Legendy plemienne
+            <!-- wybor czy urodzinki itd -->
+            <div id="dzieciMenu">
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 99.9vh; border: 3px dashed white; border-right: none;" id="uro">
+                <h2>Urodziny </h2>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> SurvivaLOVE </h4>
-                Balonowa bitwa </br>
-                Budowanie szałasu </br>
-                Zabawy z kompasem i mapą
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 33.3vh; border: 3px dashed white;" id="wes">
+                <h2> Wesela </h2>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Chemia od kuchnii </h4>
-                Doświadczenia z produktami używanymi w kuchni </br>
-                Pokaz substancji chemicznych </br>
-                Zabawa z ciekawostkami o świecie fizyki i przyrody
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 33.3vh; border-left: 3px dashed white; border-right: 3px dashed white;" id="szk">
+                <h2> Dla szkół i przedszkoli </h2>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Palcem po mapie </h4>
-                Czy da się zwiedzić cały świat w dwie godziny! Oczywiście :D </br>
-                Zabawy z najdalszych zakamarków świata </br>
-                Tworzenie ogromnej mapy
+              <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" style="height: 33.3vh; border: 3px dashed white;" id="hot">
+                <h2> Dla hoteli </h2>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Damy i rycerze </h4>
-                Zabawa w iście królewskim stylu: </br>
-                Tańce średniowieczne </br>
-                Tworzenie królewskiej biżuterii </br>
-                Zawody rycerskie
+            </div>
+            <!-- koniec wyboru -->
+            <div id="urodziny">
+              <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
+              <h3 style="margin-top: 0;"> </br> Urodziny to bardzo wyjątkowa sprawa dla każdego młodego człowieka, dlatego w tej sprawie jesteśmy otwarci na potrzeby dzieci.
+              </h3>
+              <!-- Tematy urodzin -->
+              <div class="row-fluid">
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4> Indiańska wioska </h4>
+                    Indiańskie podchody </br>
+                    Zdobywanie pióropuszy </br>
+                    Legendy plemienne
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4 style="color: #f47e57ff;"> SurvivaLOVE </h4>
+                    Balonowa bitwa </br>
+                    Budowanie szałasu </br>
+                    Zabawy z kompasem i mapą
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4 style="color: #f47e57ff;"> Chemia od kuchnii </h4>
+                    Doświadczenia z produktami używanymi w kuchni </br>
+                    Pokaz substancji chemicznych </br>
+                    Zabawa z ciekawostkami o świecie fizyki i przyrody
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4> Palcem po mapie </h4>
+                    Czy da się zwiedzić cały świat w dwie godziny! Oczywiście :D </br>
+                    Zabawy z najdalszych zakamarków świata </br>
+                    Tworzenie ogromnej mapy
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4> Damy i rycerze </h4>
+                    Zabawa w iście królewskim stylu: </br>
+                    Tańce średniowieczne </br>
+                    Tworzenie królewskiej biżuterii </br>
+                    Zawody rycerskie
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4 style="color: #f47e57ff;"> Sweet sixteen </h4>
+                    Najbardziej różowo-mięciutkie przyjęcie w tej części kraju </br>
+                    Przebieranki - pokaz mody </br>
+                    Quizy i zadania </br>
+                    Kolorowe warkoczyki
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4 style="color: #f47e57ff;"> Cyrk na kółkach </h4>
+                    Warsztaty modelowania balonów </br>
+                    Zabawy żonglerskie
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4> Piracka przygoda </h4>
+                    Poszukiwanie zaginionego skarbu </br>
+                    Tworzenie ogromnego statku pirackiego </br>
+                    Pirackie przyśpiewki
+                  </div>
+                  <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                    <h4> Bajkowa kraina </h4>
+                    Niesamowita podróż po świecie bajek </br>
+                    w towarzystwie swoich ulubionych postaci
+                  </div>
+                </div>
+                <!-- koniec tematów -->
+                <h3></br>Oczywiście wiemy, że każde dziecko ma swoje marzenie dotyczące
+                tego wyjątkowego dnia, dlatego jesteśmy otwarci i chętnie dostosujemy nasze propozycje! </h3>
+                <p>Oprócz zabaw związanych z tematem imprezy, przewidujemy:
+                  <ul>
+                    <li>gry i zabawy z chustą i tunelem animacyjnym</li>
+                    <li>warsztaty z tworzenia ogromnych baniek mydlanych</li>
+                    <li>opiekę wykwalifikowanego animatora</li>
+                    <li>prezent dla solenizanta</li>
+                    <li>dyplom i upominek dla każdego małego gościa urodzin</li>
+                    <li>warsztaty modelowania balonów</li>
+                  </ul>
+                </p>
+                <p>
+                  To jeszcze za mało? Możemy więcej!
+                  <ul>
+                    <li>malowanie twarzy według życzenia gości (dodatkowy animator: 80 zł)</li>
+                    <li>dekoracja miejsca na przyjęcie - ustalane indywidualnie</li>
+                    <li>piniata wypełniona słodkościami - 40 zł</li>
+                    <li>opieka dodatkowego animatora: 120 zł/całość</li>
+                  </ul>
+                </p>
+                <p id="endUro">
+                  Urodziny <b style="color: #f47e57ff; font-weight: normal"> pomarańczowe </b> to 3 godziny pod opieką jednego, doświadczonego animatora w cenie 400 zł. </br>
+                  Pozostałe urodziny to 2 godziny pod opieką jednego, doświadczonego animatora w cenie 250 zł. </br>
+                  Jeden animator zajmie się doskonale grupą licząca do 12 dzieci.
+                </p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Sweet sixteen </h4>
-                Najbardziej różowo-mięciutkie przyjęcie w tej części kraju </br>
-                Przebieranki - pokaz mody </br>
-                Quizy i zadania </br>
-                Kolorowe warkoczyki
+              <div id="wesela">
+                <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
+                <h2 style="margin-top: 0;"> </br> Animacja dla dzieci podczas wesel </h2>
+                <h3>Dlaczego warto zatrudnić animatora?</h3>
+                <p> Wesele to wspaniały dzień nie tylko dla Młodej Pary ale i dla gości weselnych. Warto zadbać o komfort wszystkich uczestników tego wspaniałego dnia.
+                   Animator, które zorganizuje czas dla najmłodszych gości to korzyści dla wszystkich. Rodzice mogą bawić się bez obaw o bezpieczeństwo swoich pociech.
+                   Dzięki zorganizowanej zabawie unikniemy niemiłych niespodzianek związanych z dziećmi, a one same spędzą wspaniałe chwile pełne przygód. </p>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Cyrk na kółkach </h4>
-                Warsztaty modelowania balonów </br>
-                Zabawy żonglerskie
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Piracka przygoda </h4>
-                Poszukiwanie zaginionego skarbu </br>
-                Tworzenie ogromnego statku pirackiego </br>
-                Pirackie przyśpiewki
-              </div>
-              <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <h4> Bajkowa kraina </h4>
-                Niesamowita podróż po świecie bajek </br>
-                w towarzystwie swoich ulubionych postaci
-              </div>
-              <h3></br>Oczywiście wiemy, że każde dziecko ma swoje marzenie dotyczące
-              tego wyjątkowego dnia, dlatego jesteśmy otwarci i chętnie dostosujemy nasze propozycje! </h3>
-              <p>Oprócz zabaw związanych z tematem imprezy, przewidujemy:
-                <ul>
-                  <li>gry i zabawy z chustą i tunelem animacyjnym</li>
-                  <li>warsztaty z tworzenia ogromnych baniek mydlanych</li>
-                  <li>opiekę wykwalifikowanego animatora</li>
-                  <li>prezent dla solenizanta</li>
-                  <li>dyplom i upominek dla każdego małego gościa urodzin</li>
-                  <li>warsztaty modelowania balonów</li>
-                </ul>
-              </p>
-              <p>
-                To jeszcze za mało? Możemy więcej!
-                <ul>
-                  <li>malowanie twarzy według życzenia gości (dodatkowy animator: 80 zł)</li>
-                  <li>dekoracja miejsca na przyjęcie - ustalane indywidualnie</li>
-                  <li>piniata wypełniona słodkościami - 40 zł</li>
-                  <li>opieka dodatkowego animatora: 120 zł/całość</li>
-                </ul>
-              </p>
             </div>
           </div>
         </div>
@@ -217,9 +283,9 @@
 
     </div>
 
-    <div style="height: auto; width: 100%; background-color: #1b75bcff padding-top: 30px;" id="kontakt">
-      <div class="avoidSidebar">
-        <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffff33&amp;src=msaduo8879120p4bmlidl517ck%40group.calendar.google.com&amp;color=%236B3304&amp;ctz=Europe%2FWarsaw" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>        <form id="contact">
+    <div style="height: auto; width: 100%; background-color: #1b75bcff; padding-top: 30px; text-align: center; padding-bottom: 30px;" id="kontakt">
+      <div>
+        <!-- <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=2&amp;bgcolor=%23ffff33&amp;src=msaduo8879120p4bmlidl517ck%40group.calendar.google.com&amp;color=%236B3304&amp;ctz=Europe%2FWarsaw" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>        <form id="contact"> -->
         <div class="contactForm">
             <div class="form-group center-block">
               <label for="inputName"> Imię i nazwisko </label>
