uzupelnienie uslug o wesela

--- a/index.html
+++ b/index.html
@@ -237,21 +237,21 @@
                 tego wyjątkowego dnia, dlatego jesteśmy otwarci i chętnie dostosujemy nasze propozycje! </h3>
                 <p>Oprócz zabaw związanych z tematem imprezy, przewidujemy:
                   <ul>
-                    <li>gry i zabawy z chustą i tunelem animacyjnym</li>
-                    <li>warsztaty z tworzenia ogromnych baniek mydlanych</li>
-                    <li>opiekę wykwalifikowanego animatora</li>
-                    <li>prezent dla solenizanta</li>
-                    <li>dyplom i upominek dla każdego małego gościa urodzin</li>
-                    <li>warsztaty modelowania balonów</li>
+                    <li><p>gry i zabawy z chustą i tunelem animacyjnym</p></li>
+                    <li><p>warsztaty z tworzenia ogromnych baniek mydlanych</p></li>
+                    <li><p>opiekę wykwalifikowanego animatora</p></li>
+                    <li><p>prezent dla solenizanta</p></li>
+                    <li><p>dyplom i upominek dla każdego małego gościa urodzin</p></li>
+                    <li><p>warsztaty modelowania balonów</p></li>
                   </ul>
                 </p>
                 <p>
                   To jeszcze za mało? Możemy więcej!
                   <ul>
-                    <li>malowanie twarzy według życzenia gości (dodatkowy animator: 80 zł)</li>
-                    <li>dekoracja miejsca na przyjęcie - ustalane indywidualnie</li>
-                    <li>piniata wypełniona słodkościami - 40 zł</li>
-                    <li>opieka dodatkowego animatora: 120 zł/całość</li>
+                    <li><p>malowanie twarzy według życzenia gości (dodatkowy animator: 80 zł)</p></li>
+                    <li><p>dekoracja miejsca na przyjęcie - ustalane indywidualnie</p></li>
+                    <li><p>piniata wypełniona słodkościami - 40 zł</p></li>
+                    <li><p>opieka dodatkowego animatora: 120 zł/całość</p></li>
                   </ul>
                 </p>
                 <p id="endUro">
@@ -267,6 +267,119 @@
                 <p> Wesele to wspaniały dzień nie tylko dla Młodej Pary ale i dla gości weselnych. Warto zadbać o komfort wszystkich uczestników tego wspaniałego dnia.
                    Animator, które zorganizuje czas dla najmłodszych gości to korzyści dla wszystkich. Rodzice mogą bawić się bez obaw o bezpieczeństwo swoich pociech.
                    Dzięki zorganizowanej zabawie unikniemy niemiłych niespodzianek związanych z dziećmi, a one same spędzą wspaniałe chwile pełne przygód. </p>
+                <h3>Co proponujemy?</h3>
+                <p>Indywidualny scenariusz zabaw według wybranego przez Państwa tematu, a w nim:
+                  <ul>
+                    <li><p>zabawy integracyjne z chustą i tunelem animacyjnym</p></li>
+                    <li><p>zabawy plastyczne, ruchowe, gry logiczne m.in. wyścigi w podwójnych spodniach, przeciąganie liny
+                    , konkurs rysowania cieni </p></li>
+                    <li><p>niespodzianka dla pary młodej wykonana przez dzieci</p></li>
+                    <li><p>zabawa z wielkimi bańkami mydlanymi oraz zamykanie w bańce</p></li>
+                    <li><p>tańce- również na parkiecie z dorosłymi gośćmi wesela</p></li>
+                    <li><p>balonowe ZOO</p></li>
+                    <li><p>dyplom i drobny upominek dla każdego dziecka</p></li>
+                  </ul>
+                </p>
+                <h3>Tematy animacji do wyboru</h3>
+                <!-- Tematy urodzin -->
+                <div class="row-fluid">
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Indiańska wioska </h4>
+                      Indiańskie podchody </br>
+                      Zdobywanie pióropuszy </br>
+                      Legendy plemienne
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Palcem po mapie </h4>
+                      Czy da się zwiedzić cały świat w dwie godziny! Oczywiście :D </br>
+                      Zabawy z najdalszych zakamarków świata </br>
+                      Tworzenie ogromnej mapy
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Damy i rycerze </h4>
+                      Zabawa w iście królewskim stylu: </br>
+                      Tańce średniowieczne </br>
+                      Tworzenie królewskiej biżuterii </br>
+                      Zawody rycerskie
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Cyrk na kółkach </h4>
+                      Warsztaty modelowania balonów </br>
+                      Zabawy żonglerskie
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Piracka przygoda </h4>
+                      Poszukiwanie zaginionego skarbu </br>
+                      Tworzenie ogromnego statku pirackiego </br>
+                      Pirackie przyśpiewki
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
+                      <h4> Bajkowa kraina </h4>
+                      Niesamowita podróż po świecie bajek </br>
+                      w towarzystwie swoich ulubionych postaci
+                    </div>
+                  </div>
+                  <!-- koniec tematów -->
+                  <h3> Dodatkowo: </h3>
+                  <p>
+                    <ul>
+                      <li><p><b>kącik malucha</b> (klocki drewniane, dywan, poduszki, mini basen z kulkami, książeczki)
+                        (bez dodatkowych opłat/dodatkowy opiekun w kąciku malucha 50zł/h)</p></li>
+                      <li><p><b>artystyczne malowanie twarzy</b> atestowanymi farbami(bez dodatkowych opłat w przypadku dwóch animatorek)</p></li>
+                      <li><p><b>opieka animatorek nad dziećmi przy stole.</b></br>Jeśli dzieci będą siedzieć razem przy wspólnym stole
+                        proponuję by animatorki siedziały razem z nimi i pomagały w razie potrzeby, dopilnują również by wszyscy byli najedzeni i zadowoleni
+                        (bez dodatkowych opłat) </p></li>
+                      <li><p><b>całonocna opieka nad dziećmi w pokoju hotelowym.</b> Maksymalnie do godziny 10 rano. (Dodatkowa opłata 200 zł/ cała noc)</p></li>
+                    </ul>
+                  </p>
+                  <h3> Płatności: </h3>
+                  <div class="row-fluid">
+                    <!-- Pierwszy wiersz -->
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Ilość animatorów
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Cena za 3 godziny animacji
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Każda następna godzina
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> Dwa dni animacji (6 godzin)
+                    </div>
+                    <!-- Drugi wiersz -->
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 1 animator
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 350 zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 100 zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 600zł
+                    </div>
+                    <!-- Trzeci wiersz -->
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 2 animatorów
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 500 zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 150 zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 850 zł
+                    </div>
+                    <!-- Czwarty wiersz -->
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 3 animatorów
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 650zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 170 zł
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="height: 80px;"> 1000zł
+                    </div>
+                  </div>
+                  <p style="margin-top: 20px;">
+                    <ul>
+                      <li><p>Jeśli będziecie Państwo potrzebować faktury- prosimy o informację, nie stanowi to dla nas problemu</p></li>
+                      <li><p>Płatności można dokonać przelewem- przed weselem lub gotówką w dniu wesela po zakończonych animacjach</p></li>
+                    </ul>
+                  </p>
+                  <h4> Po więcej informacji, szczegóły dotyczące umowy oraz innych formalności prosimy o wiadomość email lub telefon. </br> </h4>
+                  <h4 style="margin-top: 10px;" id="endWes"><a href="#kontakt" alt="Odnośnik do kontaktu."> Kliknij, aby przejść do kontaktu. </br>
+                    <span class="glyphicon glyphicon-chevron-down"> </span></h4>
               </div>
             </div>
           </div>
