added offers for hotels and also fixed issue with medium devices like tablets

--- a/index.html
+++ b/index.html
@@ -101,45 +101,50 @@
     <div style="height: auto; width: 100vw; background-color: #9f2067ff; padding: 30px 5vh 30px 5vh;" id="onas">
         <div style="text-align: center;">
           <img src="src/logo-biale.png" style="width: 200px;"> </img>
-          <h3>
-            Animatu to przede wszystkim grupa profesjonalistów, którzy uwielbiają dobrą zabawę i nie boją się wyzwań.
-            Animacja to dla nas coś więcej niż tylko praca, to sposób życia i myślenia.
+          <h4>
+            Animatu to przede wszystkim grupa profesjonalistów, którzy uwielbiają dobrą zabawę i nie boją się wyzwań. </br>
+            Animacja to dla nas coś więcej niż tylko praca, to sposób życia i myślenia. </br>
             Wszyscy nasi animatorzy swoje doświadczenia czerpią z harcerskiej pracy, jednocześnie mamy w swoich szeregach instruktorów,
             pedagogów oraz specjalistów do spraw organizacji.
-          </h3>
+          </h4>
           <img src="src/magda.jpg" style="border-radius: 50%; width: 200px;"> </img>
           <h2> Madzia Szwarcbach </h2>
-          <h3>
+          <h4>
           Założycielka firmy animacyjnej Animatu, z wykształcenia pedagog przedszkolny i wczesnoszkolny.
           Instruktor ZHP, działa głownie w pionie zuchowym. Animacją czasu dla dzieci zajmuje się od 3 lat.
           Prywatnie miłośniczka psów, zwłaszcza springerów, w wolnych chwilach lubi przemeblowywać mieszkanie.
-          </h3>
+        </h4>
           <img src="src/martyna.png" style="border-radius: 50%; width: 200px;"> </img>
           <h2> Martyna Mamcarczyk-Stopka </h2>
-          <h3>
+          <h4>
             Mam na imię Martyna, jestem studentką dietetyki. Interesuje się zdrowym stylem życia, muzyką oraz w wolnych chwilach lubię udać się w góry.
             Swoją przygodę z pracą z młodzieżą i dziećmi rozpoczęłam w 2010r. jako drużynowa i instruktor ZHP. Od zawsze dawało mi to zastrzyk pozytywnej
             energii. Z Animatu mam przyjemność współpracować od roku, ale już zdarzyło mi się wziąć udział w wielu przedsięwzięciach i animacjach.
             Udało mi się pomalować sporo uśmiechniętych buziek, skręcić mnóstwo kolorowych, balonowych zwierzaków oraz zaśpiewać wiele wspaniałych piosenek.
             Każdy wasz uśmiech daje mi ogromną radość i motywacje do dalszego działania. Czekam z niecierpliwością na kolejne spotkania !
-          </h3>
+          </h4>
           <img src="src/juliam.jpg" style="border-radius: 50%; width: 200px;"> </img>
           <h2> Julia Moskwa </h2>
-          <h3>
+          <h4>
             Jestem studentką pracy socjalnej oraz instruktorką ZHP. Lubię ludzi i pracę z ludźmi, a od czasu do czasu lubię zaszyć się w górach daleko od cywilizacji.
             Czasem łapię się na tym, że zdarza mi się pomylić zebrę z żyrafą.
-          </h3>
+          </h4>
           <img src="src/julia.jpg" style="border-radius: 50%; width: 200px;"> </img>
           <h2> Julka Janik </h2>
-          <h3>
+          <h4>
             W ZHP działam jako drużynowa, od około 2 lat prowadzę własna drużynę i świetnie dogaduję się z dziećmi. Od zawsze interesowała mnie zabawa z dziećmi,
             ponieważ sprawiała mi niesamowitą satysfakcję i przyjemność, więc kiedy tylko mogłam pomagałam w animacjach. Jednymi z moich ulubionych zajęć
             jest gra na ukulele oraz tańce integracyjne.
-          </h3>
+          </h4>
           <div style="border-top: 3px dashed white; margin-top: 23px;">
             <h2 style="text-decoration: underline;"> Nasze osiągnięcia: </h2>
             <h3>Strefa Dziecięca "Małpi Chwyt" </h3>
-            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            <div class="hidden-xs">
+              <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            </div>
+            <div class="visible-xs" style="text-align: center;">
+              <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FIntegrowaniePrzezWspinanie%2Fvideos%2F1476845452348795%2F&show_text=0&width=280" width="280" height="157" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
+            </div>
             <h4>Organizacja strefy Małpi Chwyt podczas największej wspinaczkowej imprezy w Polsce południowej.</br>To niesamowicie satysfakcjonujące
             tworzyć strefę animacyjną otwartą 24 godziny na dobę przez trzy dni. </h4>
             <h3>Animację świąteczne w Park & Hotel Łysoń </h3>
@@ -157,16 +162,16 @@
           <div style="line-height: 150%;" id="tresc">
               <!-- wybor czy urodzinki itd -->
               <div id="dzieciMenu">
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="uro">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="uro">
                   <h2>Urodziny </h2>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="wes">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="wes">
                   <h2> Wesela </h2>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="szk">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="szk">
                   <h2> Dla szkół i przedszkoli </h2>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12" id="hot">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="hot">
                   <h2> Dla hoteli </h2>
                 </div>
               </div>
@@ -254,11 +259,12 @@
                       <li><p>opieka dodatkowego animatora: 120 zł/całość</p></li>
                     </ul>
                   </p>
-                  <p id="endUro">
+                  <p>
                     Urodziny <b style="color: #f47e57ff; font-weight: normal"> pomarańczowe </b> to 3 godziny pod opieką jednego, doświadczonego animatora w cenie 400 zł. </br>
                     Pozostałe urodziny to 2 godziny pod opieką jednego, doświadczonego animatora w cenie 250 zł. </br>
                     Jeden animator zajmie się doskonale grupą licząca do 12 dzieci.
                   </p>
+                  <p id="endUro"> </p>
                 </div>
               <div id="wesela">
                 <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
@@ -378,8 +384,9 @@
                     </ul>
                   </p>
                   <h4> Po więcej informacji, szczegóły dotyczące umowy oraz innych formalności prosimy o wiadomość email lub telefon. </br> </h4>
-                  <h4 style="margin-top: 10px;" id="endWes"><a href="#kontakt" alt="Odnośnik do kontaktu."> Kliknij, aby przejść do kontaktu. </br>
-                    <span class="glyphicon glyphicon-chevron-down"> </span></a></h4>
+                  <h4 style="margin-top: 10px;"><a href="#kontakt"> Kliknij, aby przejść do kontaktu. </br>
+                  <span class="glyphicon glyphicon-chevron-down"> </span></a></h4>
+                  <p id="endWes"> </p>
               </div>
               <div id="szkoly">
                   <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
@@ -511,10 +518,25 @@
                     <li>Zapewniamy cały, atestowany sprzęt wspinaczkowy</li>
                   </ul>
                 </p>
+                <h3> Dlaczego właśnie my? </h3>
+                <p>Odpowiedź jest prosta- bo wiemy co robimy, a w dodatku bardzo to lubimy! Nasi instruktorzy to pasjonaci wspinaczki.
+                  Animatorzy posiadają wykształcenie pedagogiczne. Dbamy o bezpieczeństwo uczestników warsztatów.
+                  </br>
+                  Cena warsztatów dla grup do 20 osób: 1000 zł
+                  Każdy następny uczestnik - 40 zł
+                </p>
               <p id="endSzk"> </p>
               </div>
               <div id="hotele">
-
+                <h3><span class="glyphicon glyphicon-arrow-left arrowMenu" style="text-align: right;"> </span></h3>
+                <h2> Animacje hotelowe </h2>
+                <p>
+                  Zaproś naszych animatorów do swojego hotelu! Spodziewasz się wizyty większej ilości małych gości?
+                  A może chciałbyś by rodziny z dziećmi chętniej odwiedzały Państwa Hotel. Warto zatrudnić animatora- będzie dobrą duszą hotelu.
+                </p>
+                <h4 style="margin-top: 10px;"><a href="#kontakt"> Kliknij, aby przejść do kontaktu. </br>
+                <p id="endHot"> </p>
+                <span class="glyphicon glyphicon-chevron-down"> </span></a></h4>
               </div>
           </div>
         </div>
